--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
-  <a class="" routerLink="/">Home</a>
-  <nav>
+	<nav>
+  <a routerLink="/">Home</a>
     <a routerLink="/favorites" routerLinkActive="active">Favorites</a>
   </nav>
 </header>
