--- a/src/app/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-item/recipe-item.component.html
@@ -1,13 +1,34 @@
+<!--
 <div class="recipe-container">
-        <!-- ngClass used to set the icon depending on if clicking will add or remove it -->
+         ngClass used to set the icon depending on if clicking will add or remove it 
         <i class="fas"
           [ngClass]="{ 'fa-trash': favorites.contains(recipe), 'fa-heart': !favorites.contains(recipe) }"
           (click)="toggleFavorite()"></i>
+-->
       
         <!-- click the image to go to the recipe detail -->
+<!--
         <img src="{{ recipe.image }}"
           alt="picture of {{ recipe.label }}"
-          (click)="goToRecipeDetail()">
+          (click)="goToRecipeInfo()">
         <p>{{ recipe.label }}</p>
         <p>Serves {{ recipe.yield }}</p>
       </div>
+-->
+
+
+<mat-card class="recipe-container">
+  <mat-card-header>
+    <mat-card-title></mat-card-title>
+  </mat-card-header>
+  <img mat-card-image src="{{ recipe.image }}" alt="picture of {{ recipe.label }}" (click)="goToRecipeInfo()">
+  <mat-card-content>
+    <p>{{ recipe.label }}</p>
+    <p>Serves {{ recipe.yield }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button class="fas"
+		 [ngClass]="{ 'fa-trash': favorites.contains(recipe), 'fa-heart': !favorites.contains(recipe) }"
+          (click)="toggleFavorite()">LIKE</button>
+  </mat-card-actions>
+</mat-card>
