--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <header>
+	<mat-toolbar class="nav"><a routerLink="/">Home</a>
+    <a routerLink="/favorites" routerLinkActive="active">Favorites</a></mat-toolbar>
+<!--
 	<nav>
   <a routerLink="/">Home</a>
     <a routerLink="/favorites" routerLinkActive="active">Favorites</a>
   </nav>
+-->
 </header>
 <router-outlet></router-outlet>
