--- a/src/app/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-item/recipe-item.component.html
@@ -29,6 +29,6 @@
   <mat-card-actions>
     <button mat-button class="fas"
 		 [ngClass]="{ 'fa-trash': favorites.contains(recipe), 'fa-heart': !favorites.contains(recipe) }"
-          (click)="toggleFavorite()">LIKE</button>
+          (click)="toggleFavorite()"></button>
   </mat-card-actions>
 </mat-card>
