--- a/src/app/recipe-results/recipe-results.component.html
+++ b/src/app/recipe-results/recipe-results.component.html
@@ -2,7 +2,7 @@
 
 <div class="component-container">
     <p class="result">Results</p>
-    <p *ngIf="recipeResults.length === 0">Nothing found :(</p>
+    <p *ngIf="recipeResults.length === 0">Nothing to see here</p>
     <div class="recipe-results-container">
         <recipe-item *ngFor="let recipe of recipeResults" [recipe]="recipe"></recipe-item>
     </div>
