--- a/src/app/recipe-info/recipe-info.component.html
+++ b/src/app/recipe-info/recipe-info.component.html
@@ -1,5 +1,35 @@
 <!-- Recipe Breakdown -->
+<p *ngIf="!recipe">Recipe not found :(</p>
+<div class="card-container">
+<mat-card *ngIf="recipe" class="info-container">
+  <mat-card-header>
+<!--    <div mat-card-avatar class="example-header-image"></div>-->
+    <mat-card-title>{{ recipe.label }}</mat-card-title>
+    <mat-card-subtitle>Serves {{ recipe.yield }}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="{{ recipe.image }}" alt="picture of {{ recipe.label }}">
+  <mat-card-content>
+    <p>
+      Calories per serving: {{ (recipe.calories / recipe.yield).toFixed(0) }}
+    </p>
+	  <li>Tags: 
+        <span *ngFor="let tag of recipe.healthLabels; index as i"><span *ngIf="i !== 0">, </span>{{tag}}</span>
+      </li>
+	  <h3>Ingredients</h3>
+    <ul class="ingredients-list">
+      <li *ngFor="let ingredient of recipe.ingredientLines">{{ ingredient }}</li>
+    </ul>
+  </mat-card-content>
+  <mat-card-actions>
+     <a href="{{ recipe.url }}">Original Recipe</a>
+  </mat-card-actions>
+</mat-card>
+	</div>
 
+
+
+
+<!--
 <p *ngIf="!recipe">Recipe not found :(</p>
 <div *ngIf="recipe" class="info-container">
   <h1>{{ recipe.label }}</h1>
@@ -8,8 +38,8 @@
     <ul class="details-list">
       <li>Serves {{ recipe.yield }}</li>
       <li>Calories per serving: {{ (recipe.calories / recipe.yield).toFixed(0) }}</li>
-      <!-- Taglist is constructed via use of ngFor and ngIf on spans
-      Write the name of the tag for each one, and only add the preceding ", " if the tag isn't the first in the list -->
+       Taglist is constructed via use of ngFor and ngIf on spans
+      Write the name of the tag for each one, and only add the preceding ", " if the tag isn't the first in the list 
       <li>Tags: 
         <span *ngFor="let tag of recipe.healthLabels; index as i"><span *ngIf="i !== 0">, </span>{{tag}}</span>
       </li>
@@ -22,4 +52,4 @@
       <li *ngFor="let ingredient of recipe.ingredientLines">{{ ingredient }}</li>
     </ul>
   </div>
-</div>
+</div>-->
