--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -114,14 +114,15 @@ aria-labelledby="diet-restrictions"
      
 
         <mat-slider	
-		[(ngModel)]="calories"			
+		[(ngModel)]="minCalories"			
 		type="number"
 		name="minCalories"			
         thumbLabel
         [displayWith]="formatLabel"
         tickInterval="100"
         min="1"
-        max="2000"			
+        max="2000"
+		value="1"			
         ></mat-slider>
 <!--     (input)="minCalories($event)"-->
        
