--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <header>
-	<mat-toolbar class="nav"><a routerLink="/">Home</a>
-    <a routerLink="/favorites" routerLinkActive="active">Favorites</a></mat-toolbar>
+	<mat-toolbar class="nav"><a [routerLink]="['/search']" [routerLinkActive]="'is-active'"><mat-icon aria-hidden="false" aria-label="home">home</mat-icon></a><img src="assets/omnomnom-2.png" *ngIf="routerLinkActive === '/search'" alt="omnomnom logo"><a [routerLink]="['/favorites']" [routerLinkActive]="'is-active'"><mat-icon aria-hidden="false" aria-label="favorite">favorite</mat-icon></a></mat-toolbar>
+<!--	<img src="assets/omnomnom.png" alt="logo">-->
 <!--
 	<nav>
   <a routerLink="/">Home</a>
@@ -9,3 +11,4 @@
 -->
 </header>
 <router-outlet></router-outlet>
+
