--- a/src/app/favorites-page/favorites-page.component.css
+++ b/src/app/favorites-page/favorites-page.component.css
@@ -1,4 +1,35 @@
+.recipe-results-container {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ align-content: center;		
+}
 
+span {
+ margin-top: 10px;
+ color: black;
+ font-family: ‘Open Sans Condensed’, sans-serif;
+ font-size: 20px;
+}
+
+component-container {
+	margin: auto;
+	display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ align-content: center;	
+	
+}
+
+.cat-container {
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+/*
 .component-container {
   display: flex;
   justify-content: center;
@@ -10,6 +41,7 @@ p {
   color: white;
   font-family: 'Open Sans Condensed', sans-serif;
 }
+*/
 
 
 
