--- a/src/app/favorites-page/favorites-page.component.html
+++ b/src/app/favorites-page/favorites-page.component.html
@@ -1,8 +1,11 @@
 <!-- Favorites Page -->
 
 <div class="component-container">
-        <p class="favorites">Favorites</p>
-        <p *ngIf="favorites.length === 0">Nothing to see here</p>
+	<div class="cat-container">
+<!--        <p class="favorites">Favorites</p>-->
+	<img *ngIf="favorites.length === 0" src="assets/cat_hungry.png" alt="hungry-cat">
+        <span *ngIf="favorites.length === 0">Nothing to see here</span>
+		</div>
         <div class="recipe-results-container">
           <recipe-item *ngFor="let recipe of favorites" [recipe]="recipe"></recipe-item>
         </div>
