--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -6,6 +6,7 @@
 </div>	
 </div>
 
+<div class="form-box">
 <form #searchForm="ngForm" (ngSubmit)="searchRecipes(searchForm)">
  
     <mat-form-field>
@@ -19,7 +20,7 @@
             Diet Labels
           </mat-panel-title>
         </mat-expansion-panel-header>
-     
+    
 		  
 		  
 		
@@ -134,3 +135,4 @@ aria-labelledby="diet-restrictions"
   
   
   </form>
+	</div>
