--- a/src/app/recipe-item/recipe-item.component.css
+++ b/src/app/recipe-item/recipe-item.component.css
@@ -35,6 +35,7 @@ img {
     border-radius: 5px;
     display: flex;
     margin-left: 12px;
+	margin-top: 20px;
 	
 }
 
@@ -46,7 +47,7 @@ mat-card-content {
 	margin-bottom: 40px;
 	height: 80%;
 	width: 85%;
-	overflow-y: auto;
+/*	overflow-y: auto;*/
 }
 
 p {
@@ -55,6 +56,7 @@ p {
   font-family: 'Open Sans Condensed', sans-serif; 
   width: 100%;
   overflow-y: auto;
+  height: 50px;
 }
 
 .roof {
